# Code

./: .gitignore
C++/Data_structure/: Linkedlist.cpp  custArray.cpp  vecteur.cpp
C++/Leetcode/: twoSum.cpp
C++/OOP/CarModel/: Car.cpp  PassCar.cpp
C++/STL/: bureaufile.cpp  stlcont.cpp  stlexco.cpp
C++/Simple_code/: code1.cpp  codeptr.cpp  dectypes.cpp  ohms_quatre_couleur.cpp  ohom_trois_couleur.cpp  overloading.cpp  ptrtext.cpp
C++/Thread/: fthread.cpp  sthread.cpp
C++/data/: students.txt  students1.txt
C++/oop_basic/: Person2.cpp  person.cpp  student.cpp  students_db.cpp
C++/opencv_p/: CMakeLists.txt  main.cpp
C/Vector/: main.c  vecteur.c  vecteur.h
C/c_interview/: main.c
C/code_student/: student.c
C/code_student/data/: person_info_50.txt
Python/Apps/Flask_app/Flask_app1/: forms.py  main.py  models.py
Python/Apps/Flask_app/Flask_app1/static/: style.css
Python/Apps/Flask_app/Flask_app1/templates/: about.html  base.html  contact.html  index.html  services.html
Python/Simple_code/: wxtest.py
